# gdelta

./: .gitignore  CHANGELOG.md  Cargo.toml  PERFORMANCE.md  README.md  test_gdelta.sh
benches/: comprehensive.rs  delta_benchmark.rs  simple.rs
examples/: basic.rs
src/: buffer.rs  delta.rs  error.rs  gear.rs  lib.rs  varint.rs
tests/: integration.rs
