[package]
name = "gdelta"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
authors = ["Oliver Seifert <github.staging362@passmail.net>"]
license = "MIT"
description = "Fast delta compression algorithm for similar data chunks"
repository = "https://github.com/ImGajeed76/gdelta"
documentation = "https://docs.rs/gdelta"
homepage = "https://github.com/ImGajeed76/gdelta"
keywords = ["compression", "delta", "deduplication", "encoding", "gdelta"]
categories = ["compression", "algorithms", "encoding"]
readme = "README.md"

[dependencies]
wide = { version = "1.0.2", optional = true }

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
fake = { version = "4.4.0", features = ["derive", "chrono"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = "0.37.2"
chrono = "0.4.42"
xpatch = "0.1.0"
zstd = "0.13.3"
lz4 = "1.28.1"
ctrlc = "3.5.1"

[features]
default = ["simd"]
simd = ["wide"]

[[bench]]
name = "comprehensive"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"
