[package]
name = "gdelta"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
authors = ["Oliver Seifert <github.staging362@passmail.net>"]
license = "MIT"
description = "Fast delta compression algorithm for similar data chunks"
repository = "https://github.com/ImGajeed76/gdelta"
documentation = "https://docs.rs/gdelta"
homepage = "https://github.com/ImGajeed76/gdelta"
keywords = ["compression", "delta", "deduplication", "encoding", "gdelta"]
categories = ["compression", "algorithms", "encoding", "command-line-utilities"]
readme = "README.md"

[lib]
name = "gdelta"
path = "src/lib.rs"

[[bin]]
name = "gdelta"
path = "src/bin/cli.rs"
required-features = ["cli"]

[dependencies]
wide = { version = "1.0.2", optional = true }
clap = {version = "4.5.53", features = ["derive", "cargo"], optional = true}
anyhow = {version = "1.0.100", optional = true}
owo-colors = {version = "4.2.3", optional = true}
lz4 = {version = "1.28.1", optional = true}
zstd = {version = "0.13.3", optional = true}
sysinfo = {version = "0.37.2", optional = true}

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
fake = { version = "4.4.0", features = ["derive", "chrono"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = "0.37.2"
chrono = "0.4.42"
xpatch = "0.2.0"
zstd = "0.13.3"
lz4 = "1.28.1"
ctrlc = "3.5.1"
vcdiff = "0.1.0"
qbsdiff = "1.4.4"

[features]
default = ["simd"]
simd = ["wide"]
cli = [
    "dep:clap",
    "dep:anyhow",
    "dep:owo-colors",
    "dep:lz4",
    "dep:zstd",
    "dep:sysinfo"
]

[[bench]]
name = "comprehensive"
harness = false

[[bench]]
name = "simple"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"
